--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Django==4.1
 django-widget-tweaks==1.4.5
 gunicorn==20.1.0
 pip==23.3
-pyscopg2==66.0.2
+psycopg2-binary==2.9.9
 setuptools==68.0.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
